transparency is good

--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -4,7 +4,7 @@
   #tagline span{ font-size:18px;}
   .container {width: 940px; margin-left: auto; margin-right: auto; zoom: 1; display:inline-block; padding:3px 0 0 142px;}
   .container h3{ left:68px; }
-  #landingbox{ margin-bottom:70px; margin-top: 80px; height:304px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+  #landingbox{ margin-bottom:70px; margin-top: 100px; height:304px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
   .footer { position: absolute; bottom:0;}
   #landing_carousel_box { background-color: rgba(0, 0, 0, .8); min-height:137px; position:absolute; bottom:0; width: 100%; margin-left: auto; margin-right: auto; }
   .persona_horizontal_table{ display:table; margin: 0 auto; width:90%; margin-bottom:10px;}
@@ -17,7 +17,9 @@
   .challenge_table ul {list-style:none; margin-left:0; text-align:center; }
   .challenge_table{ display:table; margin: 0 auto; width:90%;}
   .challenge_table li{ width: 19.5%; display:inline-block; text-align:left; }
-  .challenge_table .mosaic-overlay{background-color: rgba(109, 109, 109, .8);}
+  .challenge_table .mosaic-overlay{background-color: transparent;}
+  .challenge_table .details h4 {font-size: 14px;font-weight: bold; text-shadow:none; color:#fff;}
+  .challenge_table .bar2 .mosaic-overlay:hover {background-color:transparent;}
   
 %div#landingbox
   %div#logospace{ style: "width:720px;margin-right:auto;margin-left:auto;position: relative;" }
