--- a/app/assets/stylesheets/z_bootstrap-overrides.css
+++ b/app/assets/stylesheets/z_bootstrap-overrides.css
@@ -27,12 +27,12 @@
 .fill { height: 40px; }
 .navbar-inner, .navbar .fill {
   border: 0;
-  background-image: -moz-linear-gradient(top, #334C80, #1F2E4C); 
-  background-image: -ms-linear-gradient(top, #334C80, #1F2E4C); 
-  background-image: -o-linear-gradient(top, #334C80, #1F2E4C);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#334C80), to(#1F2E4C)); 
-  background-image: -webkit-linear-gradient(top, #334C80, #1F2E4C);
-  background-image: linear-gradient(top, #334C80, #1F2E4C);
+  background-image: -moz-linear-gradient(top, #406B9B, #263042); 
+  background-image: -ms-linear-gradient(top, #406B9B, #263042); 
+  background-image: -o-linear-gradient(top, #406B9B, #263042);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#406B9B), to(#263042)); 
+  background-image: -webkit-linear-gradient(top, #406B9B, #263042);
+  background-image: linear-gradient(top, #406B9B, #263042);
 }
 
 .navbar { height: 40px; position: fixed; top: 0; left: 0; right: 0; z-index: 100; }
