--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -6,20 +6,21 @@
   .container h3{ left:68px; }
   #landingbox{ margin-bottom:70px; margin-top: 100px; height:304px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
   .footer { position: absolute; bottom:0;}
-  #landing_carousel_box { background-color: rgba(0, 0, 0, .8); min-height:137px; position:absolute; bottom:0; width: 100%; margin-left: auto; margin-right: auto; }
+  #landing_carousel_box {min-height:137px; position:absolute; bottom:0; width: 100%; margin-left: auto; margin-right: auto; background: #3A5A5A; /* Old browsers */background: -moz-linear-gradient(top, #3A5A5A 0%, #000000 100%); /* FF3.6+ */background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3A5A5A), color-stop(100%,#000000)); /* Chrome,Safari4+ */background: -webkit-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Chrome10+,Safari5.1+ */background: -o-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* Opera 11.10+ */background: -ms-linear-gradient(top, #3A5A5A 0%,#000000 100%); /* IE10+ */background: linear-gradient(to bottom, #3A5A5A 0%,#000000 100%); /* W3C */filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3A5A5A', endColorstr='#000000',GradientType=0 ); /* IE6-9 */}
   .persona_horizontal_table{ display:table; margin: 0 auto; width:90%; margin-bottom:10px;}
   .persona_horizontal_table li{ width: 12.5%; font-size:15px;}
-  .persona_horizontal_table li a{ text-align:center; width: 65%; margin-right: auto; margin-left: auto; padding-bottom:1px; border-bottom-width:2px; }
-  .persona_horizontal_table .nav-tabs > li > a:hover { color: rgb(207, 214, 255); border-color:transparent; background-color:transparent; border-bottom-color: #0088cc; border-bottom-width:2px;}
-  .nav-tabs > .active > a { border-bottom-width: 2px; font-weight: bold; border-bottom-color: #0088cc; background-color:transparent; border-right:none; border-left:none; border-top:none; color: rgb(207, 214, 255);}
+  .persona_horizontal_table li a{ text-align:center; width: 65%; margin-right: auto; margin-left: auto; padding-bottom:1px; border-bottom-width:2px; color: rgb(207, 214, 255);}
+  .persona_horizontal_table .nav-tabs > li > a:hover { color: rgb(207, 214, 255); border-color:transparent; background-color:transparent; border-bottom-color: rgb(58, 153, 201); border-bottom-width:2px;}
+  .nav-tabs > .active > a { border-bottom-width: 2px; font-weight: bold; border-bottom-color: rgb(58, 153, 201); background-color:transparent; border-right:none; border-left:none; border-top:none; color: rgb(207, 214, 255);}
   .nav-tabs > .active > a:hover { border:0px solid; color: rgb(207, 214, 255);}
   .persona_horizontal_table ul { border-bottom: none; margin-bottom:0;}
   .challenge_table ul {list-style:none; margin-left:0; text-align:center; }
   .challenge_table{ display:table; margin: 0 auto; width:90%;}
   .challenge_table li{ width: 19.5%; display:inline-block; text-align:left; }
-  .challenge_table .mosaic-overlay{background-color: transparent;}
-  .challenge_table .details h4 {font-size: 14px;font-weight: bold; text-shadow:none; color:#fff;}
-  .challenge_table .bar2 .mosaic-overlay:hover {background-color:transparent;}
+  .challenge_table .mosaic-overlay{background-color: rgba(0, 0, 0, .8);}
+  .challenge_table .details h4 {font-size: 13px; text-shadow:none; color:#fff; text-align:center;}
+  .challenge_table .details h5 { text-align:center; }
+  .challenge_table .bar2 .mosaic-overlay:hover {}
   
 %div#landingbox
   %div#logospace{ style: "width:720px;margin-right:auto;margin-left:auto;position: relative;" }
@@ -66,7 +67,7 @@
                       %h4 Sharing is caring
                       %h5 Spread the MetaBright Gospel!
                   %div
-                    %img.mosaic-backdrop.clip_pic{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png", style: "display: inline-block;"}
+                    %img.mosaic-backdrop.clip_pic{ src:"http://moonlite.s3.amazonaws.com/objs/44/original.png?1353538042", style: "display: inline-block;"}
               %li
                 .mosaic-block.bar2
                   %a.mosaic-overlay
@@ -74,7 +75,7 @@
                       %h4 Sharing is caring
                       %h5 Spread the MetaBright Gospel!
                   %div
-                    %img.mosaic-backdrop.clip_pic{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png", style: "display: inline-block;"}
+                    %img.mosaic-backdrop.clip_pic{ src:"http://moonlite.s3.amazonaws.com/objs/51/original.jpg?1353948060", style: "display: inline-block;"}
               %li
                 .mosaic-block.bar2
                   %a.mosaic-overlay
@@ -82,7 +83,7 @@
                       %h4 Sharing is caring
                       %h5 Spread the MetaBright Gospel!
                   %div
-                    %img.mosaic-backdrop.clip_pic{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png", style: "display: inline-block;"}
+                    %img.mosaic-backdrop.clip_pic{ src:"http://moonlite.s3.amazonaws.com/objs/50/original.jpg?1353947860", style: "display: inline-block;"}
               %li
                 .mosaic-block.bar2
                   %a.mosaic-overlay
@@ -90,7 +91,7 @@
                       %h4 Sharing is caring
                       %h5 Spread the MetaBright Gospel!
                   %div
-                    %img.mosaic-backdrop.clip_pic{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png", style: "display: inline-block;"}
+                    %img.mosaic-backdrop.clip_pic{ src:"http://moonlite.s3.amazonaws.com/objs/68/original.png?1354911643", style: "display: inline-block;"}
               %li
                 .mosaic-block.bar2
                   %a.mosaic-overlay
@@ -98,9 +99,10 @@
                       %h4 Sharing is caring
                       %h5 Spread the MetaBright Gospel!
                   %div
-                    %img.mosaic-backdrop.clip_pic{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png", style: "display: inline-block;"}
+                    %img.mosaic-backdrop.clip_pic{ src:"http://moonlite.s3.amazonaws.com/objs/55/original.jpg?1353948550", style: "display: inline-block;"}
     %div#foodie.tab_content
       %span Whatever
+      
       
 :javascript
   $(function () {
