feedback button in

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,7 +11,7 @@
     \/
     = link_to "Terms of Service", tos_path
 %div.feedback_tab
-  %a Feedback 
+  =link_to "Feedback", ideas_path 
     
 :javascript
   var uvOptions = {};
