--- a/app/views/ideas/form.html.haml
+++ b/app/views/ideas/form.html.haml
@@ -1,7 +1,8 @@
 %div.single_pane
   %div.submit_idea{style:"display:inline-block;"}
-    %h2= @idea.new_record? ? "Submit a new idea" : "Edit Idea"
+    %h2= @idea.new_record? ? "Submit a new #{Idea::TYPES[@idea.idea_type]}" : "Edit #{Idea::TYPES[@idea.idea_type]}"
     = form_for(@idea, class:"form-horizontal") do |f|
+      = f.hidden_field(:idea_type)
       %div.control-group
         %span.help-block Title
         %div.controls
@@ -12,7 +13,7 @@
           = f.text_area(:description, style: "width: 400px; height: 100px;")
       %div.control-group
         %div.controls
-          = f.submit("Submit Idea", class: "button button-actionable", style: "float:right;")
+          = f.submit("Submit #{Idea::TYPES[@idea.idea_type]}", class: "button button-actionable", style: "float:right;")
   %div.submit_idea_tips
     %h3 
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:30px; width:30px;"}
