--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -66,7 +66,7 @@
                     .mosaic-block.bar2
                       = link_to challenge_path(path.permalink), class: "mosaic-overlay" do
                         %div.details
-                          %h4= path.name
+                          %h4= truncate(path.name,length:17, separator: ' ')
                           %h5 #{path.tasks.count()} points
                       %div
                         = image_tag path.picture, class: "mosaic-backdrop clip_pic", style: "display: inline-block;"
