--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -64,7 +64,7 @@
               - if persona.paths.where("approved_at is not ?", nil).empty?
                 %span You must be registered and achieve a higher MetaBright level before you can view Challenges in this Persona.
               %ul
-                - persona.paths.where("approved_at is not ?", nil).limit(5).each do |path|
+                - persona.paths.where("approved_at is not ? and public_at is not ?", nil, nil).limit(5).each do |path|
                   %li
                     .mosaic-block.bar2
                       = link_to challenge_path(path.permalink), class: "mosaic-overlay" do
